--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <!--Верхняя линия-->
-    <header class="header">
+    <!-- <header class="header">
         <div class="conteiner">
         <a class="logo link" href="./index.html"> Web<span class="logo--color-black">Studio</span> </a>
     <nav class="navigation">
@@ -35,17 +35,17 @@
             </svg> +38 096 111 11 11</a>
         </div>
         </div>
-    </header>
+    </header> -->
     <main>
         <!--Hero-->
-        <section class="hero">
+        <!-- <section class="hero">
         <div class="conteiner__hero">
             <div class="hero__content">
                 <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
                 <button class="hero__btn button" type="button" data-modal-open>Заказать услугу</button>
             </div>         
         </div>
-        </section>
+        </section> -->
 <!--Особенности-->
         <section class="slogan">
         <div class="conteiner">
@@ -98,7 +98,7 @@
         </div>
         </section>  
 <!--Чем мы занимаемся-->
-        <section class="aside">
+        <!-- <section class="aside">
         <div class="conteiner">
             <h2 class="aside__title">Чем мы занимаемся</h2>
             <ul class="aside__list list">
@@ -122,9 +122,9 @@
                 </li>
             </ul>
         </div>
-        </section>
+        </section> -->
 <!--Наша команда-->
-        <section class="command">
+        <!-- <section class="command">
         <div class="conteiner">
             <h2 class="command-title">Наша команда</h2>
             <ul class="command-list list">
@@ -314,9 +314,9 @@
                 </li>
             </ul>
         </div>
-        </section>
+        </section> -->
 <!------------Постоянные клиенты------------>
-        <section class="clients">
+        <!-- <section class="clients">
         <div class="conteiner">
             <h2 class="clients-title">Постоянные клиенты</h2>
             <ul class="clients-list list">
@@ -376,10 +376,10 @@
                 </li>
             </ul>
         </div>
-        </section>
+        </section> -->
     </main>
-<!--Подвал-->
-    <footer class="footer">
+<!--------------Подвал----------------->
+    <!-- <footer class="footer">
     <div class="conteiner">
         <div class="footer-list">
         <section class="footer-address">
@@ -441,8 +441,8 @@
        </div>
     </div>
     </div>
-    </footer>
-    <div class="backdrop is-hidden" data-modal>
+    </footer> -->
+    <!-- <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button type="button" class="button-close-modal button" data-modal-close>
                 <svg class="modal-close"
@@ -515,6 +515,6 @@
             </form>
         </div>
     </div>
-    <script src="./js/modal.js"></script>
+    <script src="./js/modal.js"></script> -->
 </body>
 </html>
