--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </div>
         </section>  
 <!--Чем мы занимаемся-->
-        <!-- <section class="aside">
+        <section class="aside">
         <div class="conteiner">
             <h2 class="aside__title">Чем мы занимаемся</h2>
             <ul class="aside__list list">
@@ -122,7 +122,7 @@
                 </li>
             </ul>
         </div>
-        </section> -->
+        </section>
 <!--Наша команда-->
         <!-- <section class="command">
         <div class="conteiner">
