--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
         </div>
         </section>
 <!------------Постоянные клиенты------------>
-        <!-- <section class="clients">
+        <section class="clients">
         <div class="conteiner">
             <h2 class="clients-title">Постоянные клиенты</h2>
             <ul class="clients-list list">
@@ -432,7 +432,7 @@
                 </li>
             </ul>
         </div>
-        </section> -->
+        </section>
     </main>
 <!--------------Подвал----------------->
     <!-- <footer class="footer">
