--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
     </header> -->
     <main>
         <!--Hero-->
-        <!-- <section class="hero">
+        <section class="hero">
         <div class="conteiner__hero">
             <div class="hero__content">
                 <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
                 <button class="hero__btn button" type="button" data-modal-open>Заказать услугу</button>
             </div>         
         </div>
-        </section> -->
+        </section>
 <!--Особенности-->
         <section class="slogan">
         <div class="conteiner">
