--- a/index.html
+++ b/index.html
@@ -13,9 +13,16 @@
 </head>
 <body>
 <!--Верхняя линия-->
-    <!-- <header class="header">
+    <header class="header">
         <div class="conteiner">
+            <div class="header-mob">
         <a class="logo link" href="./index.html"> Web<span class="logo--color-black">Studio</span> </a>
+            <button type="button" class="menu-open button">
+                <svg class="menu-icon" width="40" height="40">
+                    <use href="./icons/symbol-defs.svg#icon-menu_40px"></use>
+                </svg>
+            </button>
+        </div>
     <nav class="navigation">
         <ul class="navigation__list list">
             <li class="navigation__item"><a href="./index.html" class="navigation__link link bottom__active">Студия</a></li>
@@ -35,7 +42,33 @@
             </svg> +38 096 111 11 11</a>
         </div>
         </div>
-    </header> -->
+        <div class="mob-menu">
+            <button type="button" class="menu-close button" data-modal-close>
+                <svg class="modal-close" width="40" height="40">
+                <use href="./icons/symbol-defs.svg#icon-close-black-18dp-2-1"></use>
+                </svg>
+                </button>
+                <nav class="bob-menu-nav">
+                    <ul class="bob-menu-nav__list list">
+                        <li class="bob-menu-nav__item"><a href="./index.html" class="navigation__link link bottom__active">Студия</a></li>
+                        <li class="bob-menu-nav__item"><a href="./portfolio.html" class="navigation__link link">Портфолио</a></li>
+                        <li class="bob-menu-nav__item"><a href="" class="navigation__link link">Контакты</a></li>
+                    </ul>
+                </nav>
+        <div class="mob-menu-cont">
+            <a href="mailto:info@devstudio.com" class="connect__mail link">
+                 info@devstudio.com</a>
+            <a href="tel:+380961111111" class="connect__tel link">
+                 +38 096 111 11 11</a>
+                 <ul class="mob-soc-list">
+                     <li class="mob-soc-item"><a href="" class="mob-soc-link link">Instagram</a></li>
+                     <li class="mob-soc-item"><a href="" class="mob-soc-link link">Twitter</a></li>
+                     <li class="mob-soc-item"><a href="" class="mob-soc-link link">Facebook</a></li>
+                     <li class="mob-soc-item"><a href="" class="mob-soc-link link">LinkedIn</a></li>
+                 </ul>
+        </div>
+        </div>
+    </header>
     <main>
         <!--Hero-->
         <section class="hero">
