--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/main.css">
 </head>
-<body>
+<body class="body">
 <!--Верхняя линия-->
     <header class="header">
         <div class="conteiner">
@@ -22,7 +22,7 @@
                     <use href="./icons/symbol-defs.svg#icon-menu_40px"></use>
                 </svg>
             </button>
-        </div>
+            </div>
     <nav class="navigation">
         <ul class="navigation__list list">
             <li class="navigation__item"><a href="./index.html" class="navigation__link link bottom__active">Студия</a></li>
@@ -42,25 +42,29 @@
             </svg> +38 096 111 11 11</a>
         </div>
         </div>
-        <div class="mob-menu">
-            <button type="button" class="menu-close button" data-modal-close>
-                <svg class="modal-close" width="40" height="40">
-                <use href="./icons/symbol-defs.svg#icon-close-black-18dp-2-1"></use>
-                </svg>
-                </button>
-                <nav class="bob-menu-nav">
-                    <ul class="bob-menu-nav__list list">
-                        <li class="bob-menu-nav__item"><a href="./index.html" class="navigation__link link bottom__active">Студия</a></li>
-                        <li class="bob-menu-nav__item"><a href="./portfolio.html" class="navigation__link link">Портфолио</a></li>
-                        <li class="bob-menu-nav__item"><a href="" class="navigation__link link">Контакты</a></li>
-                    </ul>
-                </nav>
-        <div class="mob-menu-cont">
-            <a href="mailto:info@devstudio.com" class="connect__mail link">
+<!---------------------Мобильное меню----------------------->
+        <div class="mob-menu is-hidden">
+            <div class="conteiner">
+                <div class="mob-menu-top">
+                    <button type="button" class="menu-close button" data-modal-close>
+                        <svg class="modal-close" width="40" height="40">
+                        <use href="./icons/symbol-defs.svg#icon-close-black-18dp-2-1"></use>
+                        </svg>
+                    </button>
+                    <nav class="mob-menu-nav">
+                        <ul class="mob-menu-nav__list list">
+                            <li class="mob-menu-nav__item"><a href="./index.html" class="mob-menu-link link bottom__active">Студия</a></li>
+                            <li class="mob-menu-nav__item"><a href="./portfolio.html" class="mob-menu-link link">Портфолио</a></li>
+                            <li class="mob-menu-nav__item"><a href="" class="mob-menu-link link">Контакты</a></li>
+                        </ul>
+                    </nav>
+                </div>
+        <div class="mob-menu-bottom">
+            <a href="tel:+380961111111" class="mob-menu-tel link">
+                +38 096 111 11 11</a>
+            <a href="mailto:info@devstudio.com" class="mob-menu-mail link">
                  info@devstudio.com</a>
-            <a href="tel:+380961111111" class="connect__tel link">
-                 +38 096 111 11 11</a>
-                 <ul class="mob-soc-list">
+                 <ul class="mob-soc-list list">
                      <li class="mob-soc-item"><a href="" class="mob-soc-link link">Instagram</a></li>
                      <li class="mob-soc-item"><a href="" class="mob-soc-link link">Twitter</a></li>
                      <li class="mob-soc-item"><a href="" class="mob-soc-link link">Facebook</a></li>
@@ -68,9 +72,10 @@
                  </ul>
         </div>
         </div>
+        </div>
     </header>
     <main>
-        <!--Hero-->
+<!------------------Hero-------------------->
         <section class="hero">
         <div class="conteiner__hero">
             <div class="hero__content">
@@ -79,7 +84,7 @@
             </div>         
         </div>
         </section>
-<!--Особенности-->
+<!-----------------Особенности--------------->
         <section class="slogan">
         <div class="conteiner">
             <ul class="slogan__list list">
@@ -130,7 +135,7 @@
             </ul>
         </div>
         </section>  
-<!--Чем мы занимаемся-->
+<!------------------Чем мы занимаемся-------------------------->
         <section class="aside">
         <div class="conteiner">
             <h2 class="aside__title">Чем мы занимаемся</h2>
@@ -468,11 +473,12 @@
         </section>
     </main>
 <!--------------Подвал----------------->
-    <!-- <footer class="footer">
+    <footer class="footer">
     <div class="conteiner">
         <div class="footer-list">
+            <div class="footer-tab">
         <section class="footer-address">
-            <a class="logo link" href="./index.html"> Web<span class="logo--color-white">Studio</span> </a>
+            <a class="footer-logo link" href="./index.html"> Web<span class="logo--color-white">Studio</span> </a>
             <p class="footer-text">г. Киев, пр-т Леси Украинки, 26</p> 
             <a class="footer-mail link" href="mailto:info@example.com">info@example.com</a>
             <a class="footer-tel link" href="tel:+380991111111">+38 099 111 11 11</a>   
@@ -519,18 +525,22 @@
             </li>
         </ul>         
        </section>
+            </div>
        <div class="footer-aside">
            <p class="footer-aside-text">Подпишитесь на рассылку</p>
            <form class="footer-aside-row">
                <div class="aside-box">
-               <input type="email" placeholder="E-mail" class="footer-aside-mail" required>
+               <input type="email"
+                    placeholder="E-mail"
+                    class="footer-aside-mail"
+                    required>
                <button type="sumbit" class="footer-aside-btn button">Подписаться</button>
             </div>
            </form>
        </div>
     </div>
     </div>
-    </footer> -->
+    </footer>
     <!-- <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button type="button" class="button-close-modal button" data-modal-close>
@@ -605,5 +615,6 @@
         </div>
     </div>
     <script src="./js/modal.js"></script> -->
+    <script src="./js/menu.js"></script>
 </body>
 </html>
