--- a/portfolio.html
+++ b/portfolio.html
@@ -11,32 +11,74 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/main.css">
 </head>
-<body>
-<!--Верхняя линия-->
-<header class="header">
-    <div class="conteiner">
-    <a class="logo link" href="./index.html"> Web<span class="logo--color-black">Studio</span> </a>
-<nav class="navigation">
-    <ul class="navigation__list list">
-        <li class="navigation__item"><a href="./index.html" class="navigation__link link">Студия</a></li>
-        <li class="navigation__item"><a href="./portfolio.html" class="navigation__link link bottom__active">Портфолио</a></li>
-        <li class="navigation__item"><a href="" class="navigation__link link">Контакты</a></li>
-    </ul>
-</nav>
-    <div class="connect">
-    <a href="mailto:info@devstudio.com" class="connect__mail link">
-    <svg class="connect__icon" width="16" height="12">
-        <use href="./icons/symbol-defs.svg#icon-envelope"></use>
-    </svg> info@devstudio.com</a>
-    
-    <a href="tel:+380961111111" class="connect__tel link">
-        <svg class="connect__icon" width="10" height="16">
-        <use href="./icons/symbol-defs.svg#icon-smartphone"></use>
-        </svg> +38 096 111 11 11</a>
-    </div>
-    </div>
-</header>
-<main>
+<body class="body">
+    <!--Верхняя линия-->
+    <header class="header">
+        <div class="conteiner">
+            <div class="header-mob">
+                <a class="logo link" href="./index.html"> Web<span class="logo--color-black">Studio</span> </a>
+                <button type="button" class="menu-open button">
+                    <svg class="menu-icon-open" width="40" height="40">
+                        <use href="./icons/symbol-defs.svg#icon-menu_40px"></use>
+                    </svg>
+                </button>
+            </div>
+            <nav class="navigation">
+                <ul class="navigation__list list">
+                    <li class="navigation__item"><a href="./index.html"
+                            class="navigation__link link bottom__active">Студия</a></li>
+                    <li class="navigation__item"><a href="./portfolio.html" class="navigation__link link">Портфолио</a>
+                    </li>
+                    <li class="navigation__item"><a href="" class="navigation__link link">Контакты</a></li>
+                </ul>
+            </nav>
+            <div class="connect">
+                <a href="mailto:info@devstudio.com" class="connect__mail link">
+                    <svg class="connect__icon" width="16" height="12">
+                        <use href="./icons/symbol-defs.svg#icon-envelope"></use>
+                    </svg> info@devstudio.com</a>
+
+                <a href="tel:+380961111111" class="connect__tel link">
+                    <svg class="connect__icon" width="10" height="16">
+                        <use href="./icons/symbol-defs.svg#icon-smartphone"></use>
+                    </svg> +38 096 111 11 11</a>
+            </div>
+        </div>
+        <!---------------------Мобильное меню----------------------->
+        <div class="mob-menu is-hidden">
+            <div class="conteiner">
+                <div class="mob-menu-top">
+                    <button type="button" class="menu-close button">
+                        <svg class="menu-icon-close" width="40" height="40">
+                            <use href="./icons/symbol-defs.svg#icon-close_40px"></use>
+                        </svg>
+                    </button>
+                    <nav class="mob-menu-nav">
+                        <ul class="mob-menu-nav__list list">
+                            <li class="mob-menu-nav__item"><a href="./index.html"
+                                    class="mob-menu-link link link-active">Студия</a></li>
+                            <li class="mob-menu-nav__item"><a href="./portfolio.html"
+                                    class="mob-menu-link link">Портфолио</a></li>
+                            <li class="mob-menu-nav__item"><a href="" class="mob-menu-link link">Контакты</a></li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="mob-menu-bottom">
+                    <a href="tel:+380961111111" class="mob-menu-tel link">
+                        +38 096 111 11 11</a>
+                    <a href="mailto:info@devstudio.com" class="mob-menu-mail link">
+                        info@devstudio.com</a>
+                    <ul class="mob-soc-list list">
+                        <li class="mob-soc-item"><a href="" class="mob-soc-link link">Instagram</a></li>
+                        <li class="mob-soc-item"><a href="" class="mob-soc-link link">Twitter</a></li>
+                        <li class="mob-soc-item"><a href="" class="mob-soc-link link">Facebook</a></li>
+                        <li class="mob-soc-item"><a href="" class="mob-soc-link link">LinkedIn</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </header>
+    <main>
 <!----------Фильтры------------>
      <section class="filters">
         <div class="conteiner">
@@ -172,68 +214,64 @@
      </section>
     </main>
 <!--Подвал-->
-<footer class="footer">
-    <div class="conteiner">
-        <div class="footer-list">
-        <section class="footer-address">
-            <a class="logo link" href="./index.html"> Web<span class="logo--color-white">Studio</span> </a>
-            <p class="footer-text">г. Киев, пр-т Леси Украинки, 26</p> 
-            <a class="footer-mail link" href="mailto:info@example.com">info@example.com</a>
-            <a class="footer-tel link" href="tel:+380991111111">+38 099 111 11 11</a>   
-       </section>
-
-       <section class="footer-soc">
-           <h3 class="footer-soc-title">присоединяйтесь</h3>
-           <ul class="command-soc-list list">
-            <li class="command-soc-item">
-                <a href="" class="footer-soc-link">
-                    <svg class="command-soc-icon"
-                    width="20" 
-                    height="20">
-                        <use href="./icons/symbol-defs.svg#icon-instagram"></use>
-                    </svg>
-                </a>
-            </li>
-            <li class="command-soc-item">
-                <a href="" class="footer-soc-link">
-                    <svg class="command-soc-icon"
-                    width="20" 
-                    height="20">
-                        <use href="./icons/symbol-defs.svg#icon-twitter"></use>
-                    </svg>
-                </a>
-            </li>
-            <li class="command-soc-item">
-                <a href="" class="footer-soc-link">
-                    <svg class="command-soc-icon"
-                    width="20" 
-                    height="20">
-                        <use href="./icons/symbol-defs.svg#icon-facebook"></use>
-                    </svg>
-                </a>
-            </li>
-            <li class="command-soc-item">
-                <a href="" class="footer-soc-link">
-                    <svg class="command-soc-icon"
-                    width="20" 
-                    height="20">
-                        <use href="./icons/symbol-defs.svg#icon-linkedin"></use>
-                    </svg>
-                </a>
-            </li>
-        </ul>           
-       </section>
-       <div class="footer-aside">
-            <p class="footer-aside-text">Подпишитесь на рассылку</p>
-            <form class="footer-aside-row">
-                <div class="aside-box">
-                <input type="email" placeholder="E-mail" class="footer-aside-mail" required>
-                <button type="sumbit" class="footer-aside-btn button">Подписаться</button>
+    <footer class="footer">
+        <div class="conteiner">
+            <div class="footer-list">
+                <div class="footer-tab">
+                    <section class="footer-address">
+                        <a class="footer-logo link" href="./index.html"> Web<span class="logo--color-white">Studio</span>
+                        </a>
+                        <p class="footer-text">г. Киев, пр-т Леси Украинки, 26</p>
+                        <a class="footer-mail link" href="mailto:info@example.com">info@example.com</a>
+                        <a class="footer-tel link" href="tel:+380991111111">+38 099 111 11 11</a>
+                    </section>
+    
+                    <section class="footer-soc">
+                        <h3 class="footer-soc-title">присоединяйтесь</h3>
+                        <ul class="command-soc-list list">
+                            <li class="command-soc-item">
+                                <a href="" class="footer-soc-link">
+                                    <svg class="command-soc-icon" width="20" height="20">
+                                        <use href="./icons/symbol-defs.svg#icon-instagram"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="command-soc-item">
+                                <a href="" class="footer-soc-link">
+                                    <svg class="command-soc-icon" width="20" height="20">
+                                        <use href="./icons/symbol-defs.svg#icon-twitter"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="command-soc-item">
+                                <a href="" class="footer-soc-link">
+                                    <svg class="command-soc-icon" width="20" height="20">
+                                        <use href="./icons/symbol-defs.svg#icon-facebook"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="command-soc-item">
+                                <a href="" class="footer-soc-link">
+                                    <svg class="command-soc-icon" width="20" height="20">
+                                        <use href="./icons/symbol-defs.svg#icon-linkedin"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
+                    </section>
+                </div>
+                <div class="footer-aside">
+                    <p class="footer-aside-text">Подпишитесь на рассылку</p>
+                    <form class="footer-aside-row">
+                        <div class="aside-box">
+                            <input type="email" placeholder="E-mail" class="footer-aside-mail" required>
+                            <button type="sumbit" class="footer-aside-btn button">Подписаться</button>
+                        </div>
+                    </form>
+                </div>
             </div>
-            </form>
         </div>
-    </div>
-    </div>
     </footer>
+    <script src="./js/menu.js"></script>
 </body>
 </html>
