--- a/portfolio.html
+++ b/portfolio.html
@@ -100,7 +100,7 @@
           </li>  
          </ul>
         
-         <ul class="progect-list list">
+         <!-- <ul class="progect-list list">
              <li class="progect-item">
                 <div class="progect-cover">
                     <img src="./images/project1.jpg" alt="Веб-сайт"
@@ -211,7 +211,7 @@
             </li>
          </ul>
         </div>
-     </section>
+     </section> -->
     </main>
 <!--Подвал-->
     <footer class="footer">
