--- a/portfolio.html
+++ b/portfolio.html
@@ -56,9 +56,9 @@
                     <nav class="mob-menu-nav">
                         <ul class="mob-menu-nav__list list">
                             <li class="mob-menu-nav__item"><a href="./index.html"
-                                    class="mob-menu-link link link-active">Студия</a></li>
+                                    class="mob-menu-link link">Студия</a></li>
                             <li class="mob-menu-nav__item"><a href="./portfolio.html"
-                                    class="mob-menu-link link">Портфолио</a></li>
+                                    class="mob-menu-link link link-active">Портфолио</a></li>
                             <li class="mob-menu-nav__item"><a href="" class="mob-menu-link link">Контакты</a></li>
                         </ul>
                     </nav>
@@ -100,7 +100,7 @@
           </li>  
          </ul>
         
-         <!-- <ul class="progect-list list">
+         <ul class="progect-list list">
              <li class="progect-item">
                 <div class="progect-cover">
                     <img src="./images/project1.jpg" alt="Веб-сайт"
@@ -211,7 +211,7 @@
             </li>
          </ul>
         </div>
-     </section> -->
+     </section>
     </main>
 <!--Подвал-->
     <footer class="footer">
