--- a/portfolio.html
+++ b/portfolio.html
@@ -26,8 +26,8 @@
             <nav class="navigation">
                 <ul class="navigation__list list">
                     <li class="navigation__item"><a href="./index.html"
-                            class="navigation__link link bottom__active">Студия</a></li>
-                    <li class="navigation__item"><a href="./portfolio.html" class="navigation__link link">Портфолио</a>
+                            class="navigation__link link">Студия</a></li>
+                    <li class="navigation__item"><a href="./portfolio.html" class="navigation__link link bottom__active">Портфолио</a>
                     </li>
                     <li class="navigation__item"><a href="" class="navigation__link link">Контакты</a></li>
                 </ul>
@@ -103,9 +103,21 @@
          <ul class="progect-list list">
              <li class="progect-item">
                 <div class="progect-cover">
-                    <img src="./images/project1.jpg" alt="Веб-сайт"
-                    width="370"
-                    height="294">
+                    <picture>
+                        <source srcset="./images/portfolio/img-desk-1-1x.jpg 1x,
+                                        ./images/portfolio/img-desk-1-2x.jpg 2x"
+                                 media="(min-width: 1200px)"
+                        />
+                        <source srcset="./images/portfolio/img-tab-1-1x.jpg 1x,
+                                        ./images/portfolio/img-tab-1-2x.jpg  2x"
+                                 media="(min-width: 768px)"
+                        />
+                        <source srcset="./images/portfolio/img-mob-1-1x.jpg 1x,
+                                        ./images/portfolio/img-mob-1-2x.jpg 2x"
+                                 media="(min-width: 320px)"
+                        />
+                        <img src="./images/portfolio/img-desk-1-1x.jpg" alt="Игорь Демьяненко"/>
+                    </picture>        
                     <p class="progect-top-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
                 </div>
             <div class="progect-text">
@@ -115,9 +127,21 @@
             </li>
              <li class="progect-item">
                 <div class="progect-cover">
-                    <img src="./images/project2.jpg" alt="Дизайн"
-                    width="370"
-                    height="294">
+                    <picture>
+                        <source srcset="./images/portfolio/img-desk-2-1x.jpg 1x,
+                                        ./images/portfolio/img-desk-2-2x.jpg 2x"
+                                 media="(min-width: 1200px)"
+                        />
+                        <source srcset="./images/portfolio/img-tab-2-1x.jpg 1x,
+                                        ./images/portfolio/img-tab-2-2x.jpg  2x"
+                                 media="(min-width: 768px)"
+                        />
+                        <source srcset="./images/portfolio/img-mob-2-1x.jpg 1x,
+                                        ./images/portfolio/img-mob-2-2x.jpg 2x"
+                                 media="(min-width: 320px)"
+                        />
+                        <img src="./images/portfolio/img-desk-2-1x.jpg" alt="Игорь Демьяненко"/>
+                    </picture>
                     <p class="progect-top-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
                 </div>
             <div class="progect-text">
@@ -127,9 +151,21 @@
             </li>
              <li class="progect-item">
                 <div class="progect-cover">
-                    <img src="./images/project3.jpg" alt="Приложение"
-                    width="370"
-                    height="294">
+                    <picture>
+                        <source srcset="./images/portfolio/img-desk-3-1x.jpg 1x,
+                                        ./images/portfolio/img-desk-3-2x.jpg 2x"
+                                 media="(min-width: 1200px)"
+                        />
+                        <source srcset="./images/portfolio/img-tab-3-1x.jpg 1x,
+                                        ./images/portfolio/img-tab-3-2x.jpg  2x"
+                                 media="(min-width: 768px)"
+                        />
+                        <source srcset="./images/portfolio/img-mob-3-1x.jpg 1x,
+                                        ./images/portfolio/img-mob-3-2x.jpg 2x"
+                                 media="(min-width: 320px)"
+                        />
+                        <img src="./images/portfolio/img-desk-3-1x.jpg" alt="Игорь Демьяненко"/>
+                    </picture>
                     <p class="progect-top-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
                 </div>
             <div class="progect-text">
@@ -139,9 +175,21 @@
             </li>
              <li class="progect-item">
                 <div class="progect-cover">
-                    <img src="./images/project4.jpg" alt="Маркетинг"
-                    width="370"
-                    height="294">
+                    <picture>
+                        <source srcset="./images/portfolio/img-desk-4-1x.jpg 1x,
+                                        ./images/portfolio/img-desk-4-2x.jpg 2x"
+                                 media="(min-width: 1200px)"
+                        />
+                        <source srcset="./images/portfolio/img-tab-4-1x.jpg 1x,
+                                        ./images/portfolio/img-tab-4-2x.jpg  2x"
+                                 media="(min-width: 768px)"
+                        />
+                        <source srcset="./images/portfolio/img-mob-4-1x.jpg 1x,
+                                        ./images/portfolio/img-mob-4-2x.jpg 2x"
+                                 media="(min-width: 320px)"
+                        />
+                        <img src="./images/portfolio/img-desk-4-1x.jpg" alt="Игорь Демьяненко"/>
+                    </picture>
                     <p class="progect-top-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
                 </div>
             <div class="progect-text">
@@ -151,9 +199,21 @@
             </li>
              <li class="progect-item">
                 <div class="progect-cover">
-                    <img src="./images/project5.jpg" alt="Приложение"
-                    width="370"
-                    height="294">
+                    <picture>
+                        <source srcset="./images/portfolio/img-desk-5-1x.jpg 1x,
+                                        ./images/portfolio/img-desk-5-2x.jpg 2x"
+                                 media="(min-width: 1200px)"
+                        />
+                        <source srcset="./images/portfolio/img-tab-5-1x.jpg 1x,
+                                        ./images/portfolio/img-tab-5-2x.jpg  2x"
+                                 media="(min-width: 768px)"
+                        />
+                        <source srcset="./images/portfolio/img-mob-5-1x.jpg 1x,
+                                        ./images/portfolio/img-mob-5-2x.jpg 2x"
+                                 media="(min-width: 320px)"
+                        />
+                        <img src="./images/portfolio/img-desk-5-1x.jpg" alt="Игорь Демьяненко"/>
+                    </picture>
                     <p class="progect-top-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
                 </div>
             <div class="progect-text">
@@ -163,9 +223,21 @@
             </li>
              <li class="progect-item">
                 <div class="progect-cover">
-                    <img src="./images/project6.jpg" alt="Веб-сайт"
-                    width="370"
-                    height="294">
+                   <picture>
+                        <source srcset="./images/portfolio/img-desk-6-1x.jpg 1x,
+                                        ./images/portfolio/img-desk-6-2x.jpg 2x"
+                                 media="(min-width: 1200px)"
+                        />
+                        <source srcset="./images/portfolio/img-tab-6-1x.jpg 1x,
+                                        ./images/portfolio/img-tab-6-2x.jpg  2x"
+                                 media="(min-width: 768px)"
+                        />
+                        <source srcset="./images/portfolio/img-mob-6-1x.jpg 1x,
+                                        ./images/portfolio/img-mob-6-2x.jpg 2x"
+                                 media="(min-width: 320px)"
+                        />
+                        <img src="./images/portfolio/img-desk-6-1x.jpg" alt="Игорь Демьяненко"/>
+                    </picture>
                     <p class="progect-top-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
                 </div>
             <div class="progect-text">
@@ -175,9 +247,21 @@
             </li>
              <li class="progect-item">
                 <div class="progect-cover">
-                    <img src="./images/project7.jpg" alt="Дизайн"
-                    width="370"
-                    height="294">
+                    <picture>
+                        <source srcset="./images/portfolio/img-desk-7-1x.jpg 1x,
+                                        ./images/portfolio/img-desk-7-2x.jpg 2x"
+                                 media="(min-width: 1200px)"
+                        />
+                        <source srcset="./images/portfolio/img-tab-7-1x.jpg 1x,
+                                        ./images/portfolio/img-tab-7-2x.jpg  2x"
+                                 media="(min-width: 768px)"
+                        />
+                        <source srcset="./images/portfolio/img-mob-7-1x.jpg 1x,
+                                        ./images/portfolio/img-mob-7-2x.jpg 2x"
+                                 media="(min-width: 320px)"
+                        />
+                        <img src="./images/portfolio/img-desk-7-1x.jpg" alt="Игорь Демьяненко"/>
+                    </picture>
                     <p class="progect-top-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
                 </div>
             <div class="progect-text">
@@ -187,9 +271,21 @@
             </li>
              <li class="progect-item">
                 <div class="progect-cover">
-                    <img src="./images/project8.jpg" alt="Маркетинг"
-                    width="370"
-                    height="294">
+                   <picture>
+                        <source srcset="./images/portfolio/img-desk-8-1x.jpg 1x,
+                                        ./images/portfolio/img-desk-8-2x.jpg 2x"
+                                 media="(min-width: 1200px)"
+                        />
+                        <source srcset="./images/portfolio/img-tab-8-1x.jpg 1x,
+                                        ./images/portfolio/img-tab-8-2x.jpg  2x"
+                                 media="(min-width: 768px)"
+                        />
+                        <source srcset="./images/portfolio/img-mob-8-1x.jpg 1x,
+                                        ./images/portfolio/img-mob-8-2x.jpg 2x"
+                                 media="(min-width: 320px)"
+                        />
+                        <img src="./images/portfolio/img-desk-8-1x.jpg" alt="Игорь Демьяненко"/>
+                    </picture>
                     <p class="progect-top-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
                 </div>
             <div class="progect-text">
@@ -199,9 +295,21 @@
             </li>
              <li class="progect-item">
                 <div class="progect-cover">
-                    <img src="./images/project9.jpg" alt="Приложение"
-                    width="370"
-                    height="294">
+                    <picture>
+                        <source srcset="./images/portfolio/img-desk-9-1x.jpg 1x,
+                                        ./images/portfolio/img-desk-9-2x.jpg 2x"
+                                 media="(min-width: 1200px)"
+                        />
+                        <source srcset="./images/portfolio/img-tab-9-1x.jpg 1x,
+                                        ./images/portfolio/img-tab-9-2x.jpg  2x"
+                                 media="(min-width: 768px)"
+                        />
+                        <source srcset="./images/portfolio/img-mob-9-1x.jpg 1x,
+                                        ./images/portfolio/img-mob-9-2x.jpg 2x"
+                                 media="(min-width: 320px)"
+                        />
+                        <img src="./images/portfolio/img-desk-9-1x.jpg" alt="Игорь Демьяненко"/>
+                    </picture>
                     <p class="progect-top-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
                 </div>
             <div class="progect-text">
